# OpenFortiGui

./: README.md  meson.build  org.gnome.OpenFortiGui.json
data/: meson.build  org.gnome.OpenFortiGui.desktop.in  org.gnome.OpenFortiGui.gschema.xml  org.gnome.OpenFortiGui.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  openfortigui-application.c  openfortigui-application.h  openfortigui-window.c  openfortigui-window.h  openfortigui-window.ui  openfortigui.gresource.xml
